[gd_scene load_steps=11 format=3 uid="uid://d0t32k5rgk3cr"]

[ext_resource type="FontFile" uid="uid://c4rh6kuh8blx5" path="res://assets/PixelOperator8-Bold.ttf" id="1_0kqi5"]
[ext_resource type="Script" uid="uid://bs3f4u1gqppy8" path="res://scenes/Menus/ending.gd" id="1_pq7o6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pq7o6"]
bg_color = Color(0, 0.207843, 0.4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pq7o6"]
line_spacing = 8.0
font = ExtResource("1_0kqi5")
font_size = 8
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7faod"]
line_spacing = 8.0
font = ExtResource("1_0kqi5")
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ts13r"]
line_spacing = 8.0
font = ExtResource("1_0kqi5")
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xj4lk"]
line_spacing = 8.0
font = ExtResource("1_0kqi5")
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_xj4lk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7faod"]
bg_color = Color(0, 0.207843, 0.4, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0kqi5"]
line_spacing = 8.0
font = ExtResource("1_0kqi5")
font_size = 8
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pq7o6")
link = "https://anthonylwolf.itch.io/"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuArt" type="Sprite2D" parent="CanvasLayer"]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.136
anchor_top = 0.272
anchor_right = 0.844
anchor_bottom = 0.639
offset_left = -87.04
offset_top = -97.92
offset_right = 96.84
offset_bottom = 129.96
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pq7o6")

[node name="EndText" type="Label" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_left = 16.784
offset_top = 251.092
offset_right = 316.784
offset_bottom = 315.092
text = "You escaped the corporate loop.
There's a bitter taste in your mouth.
Will you ever be truly free again?"
label_settings = SubResource("LabelSettings_pq7o6")
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.106
anchor_right = 0.978
anchor_bottom = 0.902
offset_left = 0.222
offset_top = 6.78736
offset_right = -0.201965
offset_bottom = -116.773
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="SavedText" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
text = "How many coworkers broke the loop with you?"
label_settings = SubResource("LabelSettings_7faod")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Coworkers" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
text = "x coworkers"
label_settings = SubResource("LabelSettings_ts13r")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScoreIntro" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
text = "Your score:"
label_settings = SubResource("LabelSettings_xj4lk")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
text = "2.000"
label_settings = SubResource("LabelSettings_ts13r")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Continue" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 366.513
offset_top = 259.991
offset_right = 533.513
offset_bottom = 288.991
theme_override_fonts/font = ExtResource("1_0kqi5")
theme_override_font_sizes/font_size = 16
text = "Continue"

[node name="CreditsPanel" type="Panel" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = -1
anchor_left = 0.026
anchor_top = 0.082
anchor_right = 0.948
anchor_bottom = 0.933
offset_left = -16.64
offset_top = -29.52
offset_right = 33.28
offset_bottom = 24.12
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xj4lk")
theme_override_styles/panel = SubResource("StyleBoxFlat_7faod")

[node name="AntCredits" type="Label" parent="CanvasLayer/CreditsPanel"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
offset_left = 17.0
offset_top = 23.0
offset_right = 623.0
offset_bottom = 159.0
text = "Thanks for playing The Break! This game was a solo effort by Anthony L. Wolf for the GMTK Game Jam 2025 (theme: Loop).

If you liked the game, please leave a comment on Itch to say hi!"
label_settings = SubResource("LabelSettings_ts13r")
horizontal_alignment = 1
autowrap_mode = 2

[node name="EndText2" type="Label" parent="CanvasLayer/CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.487
offset_top = 135.092
offset_right = 304.513
offset_bottom = 168.092
grow_horizontal = 2
grow_vertical = 2
text = "Game Design, Programming, Story, Art: Anthony L. Wolf
Music: FASSounds, freesound_community on Pixabay"
label_settings = SubResource("LabelSettings_0kqi5")
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CreditsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.276
offset_top = -177.053
offset_right = 152.724
offset_bottom = -68.0527
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0kqi5")
text = "Play again"

[node name="ItchButton" type="Button" parent="CanvasLayer/CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0kqi5")
text = "Itch page"

[node name="QuitButton" type="Button" parent="CanvasLayer/CreditsPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_0kqi5")
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Panel/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsPanel/VBoxContainer/ItchButton" to="." method="_on_itch_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
